@@ -57,6 +57,10 @@ java {
     targetCompatibility = JavaVersion.VERSION_11
 }
 
+compileJava {
+    options.compilerArgs.addAll(["--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED"])
+}
+
 /**
  * Remove migration SQLs from being packaged in resulting jar
  */
